# Twengine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Setup.sh
demo/: CMakeLists.txt
demo/src/: main.cpp
engine/: CMakeLists.txt
engine/include/: application.hpp  buffer.hpp  common.hpp  math_types.hpp  renderer.hpp  shader.hpp  sprite.hpp  texture.hpp  window.hpp
engine/shaders/: shader.frag  shader.vert
engine/src/: application.cpp  buffer.cpp  renderer.cpp  shader.cpp  sprite.cpp  texture.cpp  window.cpp
